# MatchLogic

./: .gitignore  CMakeLists.txt  ObjectData.h  main.cpp
.circleci/: config.yml
Model/: PlayerData.h
Network/: AbstractConnection.h  MiddleConnection.h
Utils/: Coding.h  MapReader.h  ToJson.h  UDPPacket.h
src/: main.cpp
src/Main/: Match.cpp  Match.h  Match.hpp
src/Model/: ObjectData.hpp  PlayerData.h  PlayerData.hpp  Task.cpp  Task.h  Task.hpp
src/Model/Heroes/: IceMan.cpp  IceMan.h  IceMan.hpp
src/Model/Objects/: Bullet.hpp
src/Network/: AbstractConnection.cpp  AbstractConnection.h  AbstractConnection.hpp  MiddleConnection.cpp  MiddleConnection.h  MiddleConnection.hpp
src/Utils/: EventProcessing.cpp  EventProcessing.h  EventProcessing.hpp  Hit.cpp  Hit.h  Hit.hpp  Judge.cpp  Judge.h  Judge.hpp  MapReader.cpp  MapReader.h  MapReader.hpp
src/Utils/Abstract/: AtomicQueue.cpp  AtomicQueue.h  AtomicQueue.hpp  BasicHeaders.h  BasicHeaders.hpp  EventTypes.cpp  EventTypes.hpp  InternalHeaders.h  InternalHeaders.hpp
src/Utils/Network/: Coding.cpp  Coding.h  Coding.hpp  ToJson.cpp  ToJson.h  ToJson.hpp
